# CSCI-420-Computer-Graphics

./: .gitignore  README.md
assign1/hw1-starterCode/: compile_commands.json  hw1  hw1.cpp
assign1/hw1-starterCode/milestone-code/: hw1.cpp
assign1_coreOpenGL_starterCode/hw1-starterCode/: CMakeLists.txt  Makefile
assign1_coreOpenGL_starterCode/openGLHelper-starterCode/: openGLMatrix.h
assign2/: CMakeLists.txt
assign2/Shader/cometShader/: basic.fragmentShader.glsl  basic.vertexShader.glsl
assign2/Shader/groundShader/: basic.fragmentShader.glsl  basic.vertexShader.glsl
assign2/Shader/middleShader/: basic.fragmentShader.glsl  basic.vertexShader.glsl
assign2/Shader/skyShader/: basic.fragmentShader.glsl  basic.vertexShader.glsl
assign2/Shader/sphereShader/: basic.fragmentShader.glsl  basic.vertexShader.glsl
assign2/Shader/trackShader/: basic.fragmentShader.glsl
assign2/hw2-starterCode/: Comet.h  hw2-milestone.cpp  hw2-starter.cpp
assign2/openGLHelper-starterCode/: basicPipelineProgram.cpp  pipelineProgram.h
assign3/: CMakeLists.txt
assign3/src/: hw3.cpp
